--- a/metthitrate.tex
+++ b/metthitrate.tex
@@ -4,7 +4,7 @@
 \label{table:metthitrate}
 \begin{tabular}{lr}
   \toprule
-  Emotion & Hit-rate \\
+  Emotion & Hit Rate \\
   \midrule
   Anger & $62.96\%$ \\
   Contempt & $59.75\%$ \\
