--- a/mettnomiss.tex
+++ b/mettnomiss.tex
@@ -1,6 +1,6 @@
 \begin{table}[ht]
 \centering
-\caption[The number and fraction of participants completeing all trials without misses for a given emotion]{The number and fraction of participants completeing all trials without misses for a given emotion}
+\caption[The number and fraction of participants completeing all trials without misses for a given emotion]{The number and fraction of participants completing all trials without misses for a given emotion}
 \label{table:mettnomiss}
 \begin{tabularx}{\textwidth}{lrr}
   \toprule
