--- a/specdesc.tex
+++ b/specdesc.tex
@@ -3,7 +3,7 @@
   \label{table:specdesc}
   \begin{tabular}{lrr}
     \toprule
-    (Sub-)scale &      m &      s \\
+    Subscale &      m &      s \\
     \midrule
     Identification Self   &  5.154 &  1.054 \\
     Understanding Self    &  5.012 &  1.046 \\
